# munin-node-python

./: .gitmodules  CMakeLists.txt  README.md  install.sh  munin-node-configure  pyproject.toml  setup.py
.github/workflows/: tests.yml
etc/: munin-node
munin-node-python/: __init__.py  munin-node-python.py  munin_node_python.py  muninnodepython.py
plugins/: sensors_
